maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:13: error: ';' expected but '(' found.
					Droite():
                                              ^Escaper:16: error: identifier expected but '}' found.
				}
                                ^