maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	var c=0
	while (!estSurBiscuit()) {
		while (!estFaceMur()) {
			avance();
		}
		while(c!=0) {
			if (estFaceMur()) {
				Gauche();
				if(estFaceMur()) {
					Droite():
					Droite():
				} else {
					avance():
				}
			} else {
				avance();
			}
		}
	}
}

def Gauche() {
	gauche();
	c=c+1
}

def Droite() {
	droite();
	c=c-1
}
